# Reduct-web

./: README.md
backend/: .gitignore  main.py  pyproject.toml  twelvelabs_upload.py
frontend/: app.css  components.json  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: MediaBin.tsx  PromptBin.tsx  SourceMonitor.tsx  TimelineControl.tsx
